--- a/templates/dashboard/fazendas.html
+++ b/templates/dashboard/fazendas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clientes</title>
+    <title>Fazenda</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
     <link href="/static/css/output.css" rel="stylesheet">
@@ -13,7 +13,7 @@
                 <h2 class="text-center mb-5 text-2xl">Bem vindo!</h2>
                 <ul id="sidebar" class="menu w-64 rounded-box">
                     <li>
-                        <a class="active" href="/clientes">
+                        <a href="/clientes">
                             <div style="width: 24px; height: 24px;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M16 17v2H2v-2s0-4 7-4s7 4 7 4m-3.5-9.5A3.5 3.5 0 1 0 9 11a3.5 3.5 0 0 0 3.5-3.5m3.44 5.5A5.32 5.32 0 0 1 18 17v2h4v-2s0-3.63-6.06-4M15 4a3.39 3.39 0 0 0-1.93.59a5 5 0 0 1 0 5.82A3.39 3.39 0 0 0 15 11a3.5 3.5 0 0 0 0-7"/></svg>
                             </div>
@@ -21,7 +21,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/fazendas">
+                        <a class="active" href="/fazendas">
                             <div style="width: 24px; height: 24px;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 15 15"><path fill="currentColor" d="M8 6L5 4L2 6L1 8v4h2v-2h4v2h2V8zM6 8H4V6h2zm8 4h-3V2.5a1.5 1.5 0 1 1 3 0z"/></svg>
                             </div>
@@ -74,29 +74,28 @@
 
             <section class="p-7">
                 <div class="flex items-center gap-3 mb-8">
-                    <h2 class="text-2xl">Clientes</h2>
+                    <h2 class="text-2xl">Fazenda</h2>
                     <button onclick="modal_create.showModal()" class="btn btn-success btn-sm">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M11 13H5v-2h6V5h2v6h6v2h-6v6h-2z"/></svg>
-                        Criar Cliente
+                        Criar Fazenda
                     </button>
                 </div>
 
                 <div class="overflow-x-auto flex justify-center flex-col">
                     <div class="flex items-center gap-3 mb-4">
-                        <input type="text" id="searchInput" placeholder="pesquisar por..." class="w-60 input input-bordered" onkeyup="filterTable()" />
+                        <input type="text" required placeholder="pesquisar por..." class="w-60 input input-bordered" />
                         <button class="btn btn-primary">Pesquisar</button>
                     </div>
-                    <table class="table">
+                    <table class="table w-full">
                         <!-- head -->
                         <thead class="bg-gray-300">
                             <tr>
                                 <th>ID</th>
                                 <th>Nome</th>
-                                <th>Tipo</th>
-                                <th>CPF/CNPJ</th>
-                                <th>RG</th>
-                                <th>Telefone</th>
-                                <th>E-mail</th>
+                                <th>Latitude</th>
+                                <th>Longitude</th>
+                                <th>Cidade</th>
+                                <th>Estado</th>
                                 <th class="text-center">Ações</th>
                             </tr>
                         </thead>
@@ -104,12 +103,11 @@
                             <!-- row 1 -->
                             <tr>
                                 <th> 1234 </th>
-                                <td> Igor </td>
-                                <td> Fisica </td>
-                                <td> 123.123.123-30 </td>
-                                <td> RG - 21212 </td>
-                                <td> +55 11 1111-2222 </td>
-                                <td> foo@foo.com </td>
+                                <td> Balde Cheio </td>
+                                <td> 123 </td>
+                                <td> 123 </td>
+                                <td> Salvador </td>
+                                <td> Bahia </td>
                                 <th class="flex justify-center gap-2">
                                     <button onclick="modal_edit.showModal()" class="btn btn-warning btn-sm">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M3 21v-4.25L16.2 3.575q.3-.275.663-.425t.762-.15q.4 0 .775.15t.65.45L20.425 5q.3.275.438.65T21 6.4q0 .4-.137.763t-.438.662L7.25 21zM17.6 7.8L19 6.4L17.6 5l-1.4 1.4z"/></svg>
@@ -124,12 +122,11 @@
 
                             <tr>
                                 <th> 1234 </th>
-                                <td> Igor </td>
-                                <td> Fisica </td>
-                                <td> 123.123.123-30 </td>
-                                <td> RG - 21212 </td>
-                                <td> +55 11 1111-2222 </td>
-                                <td> foo@foo.com </td>
+                                <td> Balde Cheio </td>
+                                <td> 123 </td>
+                                <td> 123 </td>
+                                <td> Salvador </td>
+                                <td> Bahia </td>
                                 <th class="flex justify-center gap-2">
                                     <button onclick="modal_edit.showModal()" class="btn btn-warning btn-sm">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M3 21v-4.25L16.2 3.575q.3-.275.663-.425t.762-.15q.4 0 .775.15t.65.45L20.425 5q.3.275.438.65T21 6.4q0 .4-.137.763t-.438.662L7.25 21zM17.6 7.8L19 6.4L17.6 5l-1.4 1.4z"/></svg>
@@ -154,7 +151,7 @@
                     <dialog id="modal_delete" class="modal">
                       <div class="modal-box">
                         <h3 class="font-bold text-lg">Deletar!</h3>
-                        <p class="py-4">Tem certeza que dejesa deletar este cliente?</p>
+                        <p class="py-4">Tem certeza que dejesa deletar esta fazenda?</p>
                         <div class="modal-action">
                           <form method="dialog">
                             <!-- if there is a button in form, it will close the modal -->
@@ -167,50 +164,60 @@
 
                     <!-- Create -->
                     <dialog id="modal_create" class="modal">
-                      <div class="modal-box">
+                      <div class="modal-box max-w-none w-[900px]">
                           <h3 class="font-bold text-lg">Criar!</h3>
-                          <form class="space-y-4">
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">Nome</span>
-                                  </label>
-                                  <input type="text" required placeholder="Nome do cliente" class="w-full input input-bordered" />
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">E-mail</span>
-                                  </label>
-                                  <input type="email" placeholder="Endereço de e-mail" class="w-full input input-bordered" />
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">Tipo</span>
-                                  </label>
-                                  <select class="select select-bordered w-full">
-                                      <option disabled selected>Tipo do cliente?</option>
-                                      <option>Pessoa Física</option>
-                                      <option>Pessoa Jurídica</option>
-                                  </select>
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">CPF/CNPJ</span>
-                                  </label>
-                                  <input type="text" required placeholder="CPF ou CNPJ" class="w-full input input-bordered" />
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">RG</span>
-                                  </label>
-                                  <input type="text" required placeholder="RG" class="w-full input input-bordered" />
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">Telefone</span>
-                                  </label>
-                                  <input type="text" required placeholder="Telefone" class="w-full input input-bordered" />
-                              </div>
-                          </form>
+                            <div class="flex items-center justify-between gap-5">
+                              <form class="space-y-4 w-full">
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Nome</span>
+                                      </label>
+                                      <input type="text" required placeholder="Nome do fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Clientes</span>
+                                      </label>
+                                      <select class="select select-bordered w-full">
+                                          <option disabled selected>Nome do cliente?</option>
+                                          <option>Igor</option>
+                                          <option>Douglas</option>
+                                      </select>
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Cidade</span>
+                                      </label>
+                                      <input type="text" placeholder="Cidade da fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Estado</span>
+                                      </label>
+                                      <input type="text" placeholder="Estado da fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Latitude</span>
+                                      </label>
+                                      <input type="text" placeholder="Latitude da fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Longitude</span>
+                                      </label>
+                                      <input type="text" placeholder="Longitude da fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                              </form>
+
+                              <img width="500px" height="500px" alt="fazenda_" src="https://img.freepik.com/vetores-gratis/desenho-desenhado-da-ilha-do-tesouro_23-2147634055.jpg">
+                          </div>
                           <div class="modal-action">
                               <form method="dialog">
                                   <!-- if there is a button in form, it will close the modal -->
@@ -223,50 +230,60 @@
 
                     <!-- Edit -->
                     <dialog id="modal_edit" class="modal">
-                      <div class="modal-box">
-                          <h3 class="font-bold text-lg">Editar!</h3>
-                          <form class="space-y-4">
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">Nome</span>
-                                  </label>
-                                  <input type="text" required placeholder="Nome do cliente" class="w-full input input-bordered" />
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">E-mail</span>
-                                  </label>
-                                  <input type="email" placeholder="Endereço de e-mail" class="w-full input input-bordered" />
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">Tipo</span>
-                                  </label>
-                                  <select class="select select-bordered w-full">
-                                      <option disabled selected>Tipo do cliente?</option>
-                                      <option>Pessoa Física</option>
-                                      <option>Pessoa Jurídica</option>
-                                  </select>
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">CPF/CNPJ</span>
-                                  </label>
-                                  <input type="text" required placeholder="CPF ou CNPJ" class="w-full input input-bordered" />
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">RG</span>
-                                  </label>
-                                  <input type="text" required placeholder="RG" class="w-full input input-bordered" />
-                              </div>
-                              <div>
-                                  <label class="label">
-                                      <span class="text-base label-text">Telefone</span>
-                                  </label>
-                                  <input type="text" required placeholder="Telefone" class="w-full input input-bordered" />
-                              </div>
-                          </form>
+                      <div class="modal-box max-w-none w-[900px]">
+                            <h3 class="font-bold text-lg">Editar!</h3>
+                            <div class="flex items-center justify-between gap-5">
+                              <form class="space-y-4 w-full">
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Nome</span>
+                                      </label>
+                                      <input type="text" required placeholder="Nome do fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Clientes</span>
+                                      </label>
+                                      <select class="select select-bordered w-full">
+                                          <option disabled selected>Nome do cliente?</option>
+                                          <option>Igor</option>
+                                          <option>Douglas</option>
+                                      </select>
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Cidade</span>
+                                      </label>
+                                      <input type="text" placeholder="Cidade da fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Estado</span>
+                                      </label>
+                                      <input type="text" placeholder="Estado da fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Latitude</span>
+                                      </label>
+                                      <input type="text" placeholder="Latitude da fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                                  <div>
+                                      <label class="label">
+                                          <span class="text-base label-text">Longitude</span>
+                                      </label>
+                                      <input type="text" placeholder="Longitude da fazenda" class="w-full input input-bordered" />
+                                  </div>
+
+                              </form>
+
+                              <img width="500px" height="500px" alt="fazenda_" src="https://img.freepik.com/vetores-gratis/desenho-desenhado-da-ilha-do-tesouro_23-2147634055.jpg">
+                          </div>
                           <div class="modal-action">
                               <form method="dialog">
                                   <!-- if there is a button in form, it will close the modal -->
@@ -276,6 +293,7 @@
                           </div>
                       </div>
                     </dialog>
+
                 </div>
             </section>
         </main>
